update Readme.md add logging-standard.md